added inset shadow on the box

--- a/App/HTML/hex.html
+++ b/App/HTML/hex.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav>
-      <h2>COLOR FLIPPER</h2>
+      <h2>RANE</h2>
       <ul class="menuList">
         <li><a href="/App/HTML/index.html">Simple</a></li>
         <li><a href="/App/HTML/hex.html">Hex</a></li>
